--- a/CNN Regression Algorithm/Algorithm.ipynb
+++ b/CNN Regression Algorithm/Algorithm.ipynb
@@ -173,7 +173,7 @@
     "# compile the model with Adam optimizer and mean-squared-error loss function\n",
     "model.compile(loss='mse',\n",
     "              optimizer=Adam(learning_rate=0.01),\n",
-    "              metrics= ['mean_absolute_error'])\n",
+    "              metrics= ['accuracy'])\n",
     "              \n",
     "# create a model saving callback and train for epochs connected to GPU runtime!!\n",
     "\n",
